tdf#137208 Assume that dladdr provides an absolute pathname

3dfb38a45d6495d357c3359b5b02cde871df6f67 "added getUrlFromAddress (#88338#)" had
introduced the call to osl_getAbsoluteFileURL for no documented reason, but it
looks unlikely that any relevant implementation of dladdr (as called by
getModulePathFromAddress; and where dladdr is a non-POSIX extension on the
various platforms) would provide pathnames that are relative to the process's
CWD.

(Instead, add a check whether osl_getFileURLFromSystemPath succeeds.)

Change-Id: If291e9fdf63fc3f42ba7c7e3138d7db5328ed165
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/111004
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>